--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "orb-take-home",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.1",
     "orb-billing": "^5.5.0"
   }
 }
